--- a/Views/User_SignIn.ejs
+++ b/Views/User_SignIn.ejs
@@ -18,9 +18,11 @@
         <div class="wrapper">
             <form action="/" method="post" name="Login_Form" class="form-signin">
                 <h3 class="form-signin-heading">Welcome! Please Sign In</h3>
-
-                <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
+                
+                <input type="text" class="form-control" name="name" placeholder="Your Name" required="" />
+                <input type="email" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
                 <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
+                <input type="password" class="form-control" name="confirm_password" placeholder="Please confirm your password" required="" />
 
                 <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">Login</button>
             </form>
